--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -12,7 +12,7 @@ featured-image: coda006
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: # Default is 12em
 # optional: change position of background image, center, top, bottom
-home-banner-image-position: # Default is top
+home-banner-image-position: top
 # height of the carousel at the bottom of the home page; this is in px, but just enter a number (don't include "px"). Default is 300
 carousel-height: 300 
 # If you'd like to feature specific subjects on the front page, fill in the below with subjects and separate them by semi-colon. 
